tests/ui/lifetimes/missing-lifetime-specifier-13497.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/missing-lifetime-specifier-13497.rs:4:5
   |
LL |     &str
   |     ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`
   |
LL |     &'static str
   |      +++++++
help: instead, you are more likely to want to return an owned value
   |
LL -     &str
LL +     String
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
